# Integrity

./: .gitignore  README.md
Book/: .gitignore  .project  .texlipse  Appendix-CMake.tex  Appendix-Mandelbrot.tex  Appendix-MiscCode.tex  Chapter-Cpp11.tex  Chapter-Distributed-FaultTolerant-DAG.tex  Chapter-Distributed-FaultTolerant.tex  Chapter-Distributed-MessageCoding.tex  Chapter-Distributed.tex  Chapter-Networking.tex  Chapter-Overview.tex  Chapter-Scalable-DAG.tex  Chapter-Scalable-Priority.tex  Chapter-Scalable-TaskBased.tex  Dist-Systems.tex
Book-Code/Chapter-Cpp11/Decltype/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-Cpp11/FunctionPointers/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-Cpp11/Lambdas/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-Cpp11/RangedFor/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-Cpp11/SimpleThreading/: CMakeLists.txt  IRange.hpp  MainCode.cpp
Book-Code/Chapter-Cpp11/SmartPointers/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-Cpp11/ThreadSynchronization/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-DAG/DAG/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-DAG/Scalability/: CMakeLists.txt  ConcurrentDAG-Debug.hpp  ConcurrentDAG.hpp  MandelFinishedTask.hpp  MandelPartTask.hpp  Mandelbrot.cpp  Mandelbrot.hpp  NextPrimeTask.cpp  NextPrimeTask.hpp  ScalabilityApp.cpp  ScalabilityApp.hpp  SimpleTask.hpp  Task.cpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp  WinMain.cpp  WorkerThread.cpp  WorkerThread.hpp
Book-Code/Chapter-Distributed/: CMakeLists.txt
Book-Code/Chapter-Distributed/Client/: DistributedApp.cpp  DistributedApp.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Server.hpp  ServerSet.cpp  ServerSet.hpp  TaskRequestQueue.cpp  TaskRequestQueue.hpp  WinMain.cpp
Book-Code/Chapter-Distributed/Server/: ComputeServer.cpp  ComputeServer.hpp  ServerMain.cpp
Book-Code/Chapter-Distributed/Shared/: MandelMisc.hpp
Book-Code/Chapter-Distributed/Shared/Messages/: MandelMessage.cpp  MandelMessage.hpp  MandelResultMessage.cpp  MandelResultMessage.hpp  Message.cpp  Message.hpp  MessageTypes.hpp  ResultMessage.hpp  TaskRequest.hpp  TerminateCommand.hpp
Book-Code/Chapter-Distributed/Shared/Tasks/: MandelTask.cpp  MandelTask.hpp  NextPrimeTask.hpp  Task.cpp  Task.hpp
Book-Code/Chapter-Distributed/Shared/Threading/: ConcurrentPriorityQueue.hpp  ThreadPool.cpp  WorkerThread.cpp  WorkerThread.hpp
Book-Code/Chapter-FaultTolerant/: CMakeLists.txt
Book-Code/Chapter-FaultTolerant-DAG/: CMakeLists.txt
Book-Code/Chapter-FaultTolerant-DAG/Client/: AssignedTask.cpp  AssignedTask.hpp  FaultTolerantApp.cpp  FaultTolerantApp.hpp  Mandelbrot.cpp  Mandelbrot.hpp  Server.hpp  ServerSet.cpp  ServerSet.hpp  TaskRequestQueue.cpp  TaskRequestQueue.hpp  WinMain.cpp
Book-Code/Chapter-FaultTolerant-DAG/Server/: ComputeServer.cpp  ComputeServer.hpp  ServerMain.cpp
Book-Code/Chapter-FaultTolerant/Client/: AssignedTask.cpp  AssignedTask.hpp  FaultTolerantApp.cpp  FaultTolerantApp.hpp  Mandelbrot.cpp  ServerSet.cpp  ServerSet.hpp  TaskRequestQueue.cpp  TaskRequestQueue.hpp  WinMain.cpp
Book-Code/Chapter-FaultTolerant/Server/: ComputeServer.cpp  ComputeServer.hpp
Book-Code/Chapter-Networking/BoostBuffers/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-Networking/BoostConnection/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp
Book-Code/Chapter-Networking/BoostIoService/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-Networking/BoostSendReceive/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp
Book-Code/Chapter-Networking/BoostStrand/: CMakeLists.txt  MainCode.cpp
Book-Code/Chapter-Networking/BoostThreadedSendReceive/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp
Book-Code/Chapter-Scalable-Priority/Scalability/: CMakeLists.txt  ConcurrentMultiqueue.hpp  MandelImageTask.cpp  MandelImageTask.hpp  MandelPartTask.cpp  MandelPartTask.hpp  Mandelbrot.cpp  Mandelbrot.hpp  NextPrimeTask.cpp  NextPrimeTask.hpp  ScalabilityApp.cpp  ScalabilityApp.hpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp  WorkerThread.cpp  WorkerThread.hpp
Book-Code/Chapter-Scalable/Scalability/: CMakeLists.txt  ConcurrentQueue.hpp  MandelImageTask.cpp  MandelImageTask.hpp  MandelPartTask.cpp  MandelPartTask.hpp  Mandelbrot.cpp  Mandelbrot.hpp  NextPrimeTask.hpp  ScalabilityApp.cpp  ScalabilityApp.hpp  Task.hpp  ThreadPool.cpp  ThreadPool.hpp  WinMain.cpp  WorkerThread.cpp  WorkerThread.hpp
Book-Code/Extended-FaultTolerant-DAG/Client/: FaultTolerantApp.cpp  FaultTolerantApp.hpp  MandelMisc.hpp  Mandelbrot.cpp  Mandelbrot.hpp  WinMain.cpp
Book-Code/Extended-FaultTolerant-DAG/Server/: ComputeServer.cpp  ComputeServer.hpp  ServerMain.cpp
Book-Code/Extended-FaultTolerant-DAG/Shared/: AssignedTask.cpp  AssignedTask.hpp  FaultTolerantFramework.cpp  FaultTolerantFramework.hpp  Server.hpp  ServerSet.cpp  ServerSet.hpp  TaskRequestQueue.cpp  TaskRequestQueue.hpp  TaskStatusTool.cpp  TaskStatusTool.hpp
Book-Code2/BoostSendReceive/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp  message.proto
Book-Code2/BoostThreadedSendReceive/: CMakeLists.txt  ClientMain.cpp  ServerMain.cpp  message.proto
Book-Code2/Chapter-FaultTolerant-DAG/: CMakeLists.txt
Book-Code2/Chapter-FaultTolerant-DAG/Client/: FaultTolerantApp.cpp  FaultTolerantApp.hpp  MandelMisc.hpp  Mandelbrot.cpp  Mandelbrot.hpp  WinMain.cpp
Book-Code2/Chapter-FaultTolerant-DAG/Server/: ComputeServer.cpp  ComputeServer.hpp
Book-Code2/Chapter-FaultTolerant-DAG/Shared/: AssignedTask.hpp  FaultTolerantFramework.hpp  IRange.hpp  Server.hpp  ServerSet.cpp  TaskRequestQueue.cpp  TaskRequestQueue.hpp  TaskStatusTool.hpp
Book-Code2/Chapter-FaultTolerant-Priority/: CMakeLists.txt
Book-Code2/Chapter-FaultTolerant-Priority/Client/: FaultTolerantApp.cpp  FaultTolerantApp.hpp  WinMain.cpp
Book-Code2/Chapter-FaultTolerant-Priority/Server/: ComputeServer.cpp  ServerMain.cpp
Book-Code2/Chapter-FaultTolerant-Priority/Shared/: AssignedTask.cpp  AssignedTask.hpp  FaultTolerantFramework.cpp  ServerSet.hpp  (+3 more)
Book/Images/: Distributed-Communication-Sequence.uxf  Distributed-Model.graphml  FaultTolerant-Model.graphml
(+143 files in other folders)
